<resources>
    <string name="app_name">RouteMeTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Savva Zubovich</string>
    <string name="setting_text_account">Аккаунт</string>
    <string name="settings_default_number">+375295588900</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Sorst</string>
    <string name="settings_label_login">Имя аккаунта</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Вам было отправлено SMS сообщение с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Введите ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="about_developer_information">Разработано: Sorst(Савва Зубович)</string>
    <string name="about_version_information">Version: 1.1</string>
    <string name="register_phone_hint">-------------</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_username_hint">Имя пользователя</string>
    <string name="settings_label_status">Статус</string>
    <string name="settings_hint_status">Статус</string>
    <string name="weather_fragment_name">Прогноз погоды</string>
    <string name="weather_hint">Введите город</string>
</resources>